// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnitForm /> by default matches with snapshot 1`] = `
<form
  onSubmit={[Function]}
  style={
    Object {
      "margin": 0,
      "padding": 0,
    }
  }
>
  <div
    className="marger__StyledMarger-q3lecu-0 gKSWLw"
  >
    <div
      className="k-Grid"
      data-radium={true}
      style={
        Object {
          "display": "flex",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@xs k-Grid__col--5@m"
      >
        <div
          className="marger__StyledMarger-q3lecu-0 csmETU"
        >
          <label
            className="k-Label k-Label--micro"
            htmlFor="donation-amount"
            onClick={[Function]}
          >
            Enter your amount
          </label>
        </div>
        <div
          className="marger__StyledMarger-q3lecu-0 cHJBWz"
        >
          <div
            className="k-TextInputWithUnit k-TextInputWithUnit--fullWidth"
          >
            <input
              autoComplete="off"
              className="k-TextInput k-TextInputWithUnit__input"
              defaultValue=""
              disabled={false}
              id="donation-amount"
              name="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Your amount"
              type="number"
            />
            <span
              className="k-TextInputWithUnit__unit"
            >
              €
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 hiYWHy"
  >
    <div
      className="rmq-2001d403"
      data-radium={true}
      style={Object {}}
    >
      <button
        aria-label="To contribute"
        className="rmq-2001d403 k-Button k-Button--helium k-Button--big"
        data-radium={true}
        disabled={false}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={Object {}}
        tabIndex={null}
        type="submit"
      >
        To contribute
      </button>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "@media (max-width: 639px){ .rmq-2001d403{width: 100% !important;}}",
          }
        }
      />
    </div>
  </div>
</form>
`;

exports[`<TextInputWithUnitForm /> disabled matches with snapshot 1`] = `
<form
  onSubmit={[Function]}
  style={
    Object {
      "margin": 0,
      "padding": 0,
    }
  }
>
  <div
    className="marger__StyledMarger-q3lecu-0 gKSWLw"
  >
    <div
      className="k-Grid"
      data-radium={true}
      style={
        Object {
          "display": "flex",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@xs k-Grid__col--5@m"
      >
        <div
          className="marger__StyledMarger-q3lecu-0 csmETU"
        >
          <label
            className="k-Label k-Label--micro"
            htmlFor="donation-amount"
            onClick={[Function]}
          >
            Enter your amount
          </label>
        </div>
        <div
          className="marger__StyledMarger-q3lecu-0 cHJBWz"
        >
          <div
            className="k-TextInputWithUnit k-TextInputWithUnit--fullWidth"
          >
            <input
              autoComplete="off"
              className="k-TextInput k-TextInputWithUnit__input is-disabled"
              defaultValue=""
              disabled={true}
              id="donation-amount"
              name="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Your amount"
              type="number"
            />
            <span
              className="k-TextInputWithUnit__unit is-inactive"
            >
              €
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 hiYWHy"
  >
    <div
      className="rmq-2001d403"
      data-radium={true}
      style={Object {}}
    >
      <button
        aria-label="To contribute"
        className="rmq-2001d403 k-Button k-Button--helium k-Button--big"
        data-radium={true}
        disabled={true}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={Object {}}
        tabIndex={null}
        type="submit"
      >
        To contribute
      </button>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "@media (max-width: 639px){ .rmq-2001d403{width: 100% !important;}}",
          }
        }
      />
    </div>
  </div>
</form>
`;

exports[`<TextInputWithUnitForm /> on error matches with snapshot 1`] = `
<form
  onSubmit={[Function]}
  style={
    Object {
      "margin": 0,
      "padding": 0,
    }
  }
>
  <div
    className="marger__StyledMarger-q3lecu-0 eQydFv"
  >
    <div
      className="k-Grid"
      data-radium={true}
      style={
        Object {
          "display": "flex",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@xs k-Grid__col--5@m"
      >
        <div
          className="marger__StyledMarger-q3lecu-0 csmETU"
        >
          <label
            className="k-Label k-Label--micro"
            htmlFor="donation-amount"
            onClick={[Function]}
          >
            Enter your amount
          </label>
        </div>
        <div
          className="marger__StyledMarger-q3lecu-0 jSUHLH"
        >
          <div
            className="k-TextInputWithUnit k-TextInputWithUnit--fullWidth"
          >
            <input
              autoComplete="off"
              className="k-TextInput k-TextInputWithUnit__input is-error"
              defaultValue=""
              disabled={false}
              id="donation-amount"
              name="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Your amount"
              type="number"
            />
            <span
              className="k-TextInputWithUnit__unit is-error"
            >
              €
            </span>
          </div>
        </div>
        <div
          className="marger__StyledMarger-q3lecu-0 WSKaG"
        >
          <span
            className="k-u-color-error k-u-size-micro k-u-weight-regular"
          >
            lorem ipsum dolor sit amet consectetur.
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 hiYWHy"
  >
    <div
      className="rmq-2001d403"
      data-radium={true}
      style={Object {}}
    >
      <button
        aria-label="To contribute"
        className="rmq-2001d403 k-Button k-Button--helium k-Button--big"
        data-radium={true}
        disabled={false}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={Object {}}
        tabIndex={null}
        type="submit"
      >
        To contribute
      </button>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "@media (max-width: 639px){ .rmq-2001d403{width: 100% !important;}}",
          }
        }
      />
    </div>
  </div>
</form>
`;
